--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -166,4 +166,11 @@
                                           android:id="@+id/guideline"
                                           android:orientation="vertical"
                                           app:layout_constraintGuide_percent="0.5"/>
+    <Button
+            android:text="+/-"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/positiveNegativeButton" app:layout_constraintEnd_toStartOf="@+id/button0"
+            android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button0"
+            android:minWidth="48dp"/>
 </android.support.constraint.ConstraintLayout>
